Add args for preprocess

--- a/File_Directory/config/config_default.json
+++ b/File_Directory/config/config_default.json
@@ -1,9 +1,19 @@
-{"dataset":{
+{"global":{
+  },
+"dataset":{
     "dataset_path":{"type":"string", "description":"数据集路径","default":"File_Directory/dataset"},
     "examples_path":{"type":"string", "description":"examples缓存路径","default":"File_Directory/examples"},
+    "max_seq_length":{"type":"int","description":"最长序列长度","default":512},
+    "examples_type":{"type":"string","description":"读取examples文件类型","default":"example"},
+    "examples_name":{"type":"string","description":"读取examples文件名","default":""},
+    "examples_format":{"type":"string","description":"读取examples文件格式","default":"pickle"},
+    "vocab_type":{"type":"string","description":"读取字典文件类型","default":"vocab"},
+    "vocab_name":{"type":"string","description":"读取字典文件名","default":""},
+    "vocab_format":{"type":"string","description":"读取字典文件格式","default":"pickle"},
     "vocab_size":{"type":"int","description":"词表的大小","default":0},
-    "max_seq_length":{"type":"int","description":"最长序列长度","default":512}
-},
+    "do_lowercase":{"type":"bool","description":"是否进行对西文字符的处理","default":true},
+    "shuffle":{"type":"bool","description":"是否进行examples的打乱","default":true}
+  },
 "build":{
     "num_labels":{"type":"int","description":"分类的类别数","default":3},
     "hidden_size":{"type":"int","description":"embedding后向量的维数","default":384},
@@ -42,11 +52,11 @@
     "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
     "use_gpu":{"type":"bool","description":"是否使用gpu","default":true},
     "num_of_device":{"type":"int","description":"使用的设备数","default":1}
-    },
+  },
 "predict":{
     "use_gpu":{"type":"bool","description":"是否使用gpu","default":true},
     "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
     "num_of_device":{"type":"int","description":"使用的设备数","default":1},
     "model_path":{"type":"string","description":"模型路径","default":"File_Directory/models/model"}
-    }
+  }
 }
