--- a/File_Directory/config/config_default.json
+++ b/File_Directory/config/config_default.json
@@ -3,13 +3,14 @@
 "dataset":{
     "dataset_path":{"type":"string", "description":"数据集路径","default":"File_Directory/dataset"},
     "examples_path":{"type":"string", "description":"examples缓存路径","default":"File_Directory/examples"},
+    "batch_size":{"type":"int","description":"batch的大小","default":32},
     "max_seq_length":{"type":"int","description":"最长序列长度","default":512},
     "examples_type":{"type":"string","description":"读取examples文件类型","default":"example"},
     "examples_name":{"type":"string","description":"读取examples文件名","default":""},
     "examples_format":{"type":"string","description":"读取examples文件格式","default":"pickle"},
     "vocab_type":{"type":"string","description":"读取字典文件类型","default":"vocab"},
-    "vocab_name":{"type":"string","description":"读取字典文件名","default":""},
-    "vocab_format":{"type":"string","description":"读取字典文件格式","default":"pickle"},
+    "vocab_name":{"type":"string","description":"读取字典文件名","default":"vocab"},
+    "vocab_format":{"type":"string","description":"读取字典文件格式","default":"txt"},
     "vocab_size":{"type":"int","description":"词表的大小","default":0},
     "do_lowercase":{"type":"bool","description":"是否进行对西文字符的处理","default":true},
     "shuffle":{"type":"bool","description":"是否进行examples的打乱","default":true}
