--- a/File_Directory/config/config_default.json
+++ b/File_Directory/config/config_default.json
@@ -1,4 +1,9 @@
 {"global":{
+    "load_model_path":{"type":"string","description":"当继续训练时，指定模型路径","default":""},
+    "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
+    "use_gpu":{"type":"bool","description":"是否使用gpu","default":false},
+    "num_of_device":{"type":"int","description":"使用的设备数","default":1},
+    "model_path":{"type":"string","description":"预测使用模型路径","default":"File_Directory/models/model"}
   },
 "dataset":{
     "dataset_path":{"type":"string", "description":"数据集路径","default":"File_Directory/dataset"},
@@ -12,9 +17,7 @@
     "vocab_name":{"type":"string","description":"读取字典文件名","default":"vocab"},
     "vocab_format":{"type":"string","description":"读取字典文件格式","default":"txt"},
     "vocab_size":{"type":"int","description":"词表的大小","default":0},
-    "do_lowercase":{"type":"bool","description":"是否进行对西文字符的处理","default":true},
-    "shuffle":{"type":"bool","description":"是否进行examples的打乱","default":true},
-    "shuffle_seed":{"type":"int","description":"打乱examples使用的seed","default":null}
+    "do_lowercase":{"type":"bool","description":"是否进行对西文字符的处理","default":true}
   },
 "build":{
     "num_labels":{"type":"int","description":"分类的类别数","default":3},
@@ -26,12 +29,14 @@
     "hidden_act":{"type":"string","description":"激活函数的名称","default":"relu"},
     "hidden_dropout_prob":{"type":"float","description":"除attention参数外的dropout率","default":0},
     "attention_dropout_prob":{"type":"float","description":"attention参数的dropout率","default":0},
-    "initializer_range":{"type":"float","description":"参数随机初始化时的标准差","default":0.02}
-    },
+    "initializer_range":{"type":"float","description":"参数随机初始化时的标准差","default":0.02},
+    "type_vocab_size": {"type": "int", "description": "","default": 2},
+    "use_fp16": {"type": "bool", "description": "","default": false}
+},
 "train":{
     "max_epoch":{"type":"int","description":"最大训练epoch","default":20},
     "early_stopping":{"type":"bool","description":"是否采用早停策略","default":true},
-    "early_stopping_treshold":{"type":"float","description":"性能增长比例小于阈值被判断为停滞","default":0.03},
+    "early_stopping_threshold":{"type":"float","description":"性能增长比例小于阈值被判断为停滞","default":0.03},
     "early_stopping_stand_times":{"type":"int","description":"连续停滞超过几次停止训练","default":10},
     "base_learning_rate":{"type":"float","description":"基础学习率","default":0.0001},
     "learning_rate_strategy":{"type":"string","description":"学习率变化策略","default":"fixed"},
@@ -49,18 +54,10 @@
     "adam_beta1":{"type":"float","description":"一阶矩估计的指数衰减率","default":0.9},
     "adam_beta2":{"type":"float","description":"二阶矩估计的指数衰减率","default":0.999},
     "adam_epsilon":{"type":"float","description":"保持数值稳定性的短浮点类型值","default":1e-08},
-    "snapshot_frequencey":{"type":"int", "description":"每隔多少epoch保存一次训练快照", "default":10},
-    "continue_train":{"type":"bool","description":"是否是接上一次训练","default":false},
-    "continue_type":{"type":"string", "description":"继续训练的类型：snapshot或model", "default":"snapshot"},
-    "load_model_path":{"type":"string","description":"当继续训练时，指定模型路径","default":""},
-    "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
-    "use_gpu":{"type":"bool","description":"是否使用gpu","default":true},
-    "num_of_device":{"type":"int","description":"使用的设备数","default":1}
-  },
+    "snapshot_frequency":{"type":"int", "description":"每隔多少epoch保存一次训练快照", "default":10},
+    "continue_train":{"type":"bool","description":"是否是接上一次训练，若为true必须指定load_model_path","default":false},
+    "pretrained_model_path":{"type":"string", "description":"当是第一次训练时，指定预训练模型", "default":""}
+},
 "predict":{
-    "use_gpu":{"type":"bool","description":"是否使用gpu","default":true},
-    "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
-    "num_of_device":{"type":"int","description":"使用的设备数","default":1},
-    "model_path":{"type":"string","description":"模型路径","default":"File_Directory/models/model"}
   }
 }
