--- a/File_Directory/config/config_default.json
+++ b/File_Directory/config/config_default.json
@@ -1,19 +1,19 @@
 {"global":{
     "load_model_path":{"type":"string","description":"当继续训练时，指定模型路径","default":""},
     "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
-    "use_gpu":{"type":"bool","description":"是否使用gpu","default":false},
+    "use_gpu":{"type":"bool","description":"是否使用gpu","default":true},
     "num_of_device":{"type":"int","description":"使用的设备数","default":1},
-    "model_path":{"type":"string","description":"预测使用模型路径","default":"File_Directory/models/model"}
+    "model_path":{"type":"string","description":"预测使用模型路径","default":"File_Directory/models/model"},
+    "batch_size":{"type":"int","description":"batch的大小","default":32}
   },
 "dataset":{
     "dataset_path":{"type":"string","description":"数据集路径","default":"File_Directory/dataset"},
     "examples_path":{"type":"string","description":"examples缓存路径","default":"File_Directory/examples"},
     "train_file_path_zhidao":{"type":"string","description":"zhidao数据集路径","default":"File_Directory/dataset/zhidao.train.json"},
     "train_file_path_search":{"type":"string","description":"search数据集路径","default":"File_Directory/dataset/search.train.json"},
-    "train_examples_path":{"type":"string","description":"划分好的训练集缓存路径","default":"File_Directory/examples/train_examples"},
-    "dev_examples_path":{"type":"string","description":"划分好的验证集缓存路径","default":"File_Directory/examples/dev_examples"},
-    "test_examples_path":{"type":"string","description":"划分好的测试集缓存路径","default":"File_Directory/examples/test_examples"},
-    "batch_size":{"type":"int","description":"batch的大小","default":32},
+    "train_examples_path":{"type":"string","description":"划分好的训练集缓存路径","default":"File_Directory/examples/train.examples"},
+    "dev_examples_path":{"type":"string","description":"划分好的验证集缓存路径","default":"File_Directory/examples/dev.examples"},
+    "test_examples_path":{"type":"string","description":"划分好的测试集缓存路径","default":"File_Directory/examples/test.examples"},
     "max_seq_length":{"type":"int","description":"最长序列长度","default":512},
     "vocab_type":{"type":"string","description":"读取字典文件类型","default":"vocab"},
     "vocab_name":{"type":"string","description":"读取字典文件名","default":"vocab"},
@@ -59,14 +59,10 @@
     "adam_epsilon":{"type":"float","description":"保持数值稳定性的短浮点类型值","default":1e-08},
     "snapshot_frequency":{"type":"int", "description":"每隔多少epoch保存一次训练快照", "default":10},
     "continue_train":{"type":"bool","description":"是否是接上一次训练，若为true必须指定load_model_path","default":false},
-    "pretrained_model_path":{"type":"string", "description":"当是第一次训练时，指定预训练模型", "default":""}
-  },
+    "pretrained_model_path":{"type":"string", "description":"当是第一次训练时，指定预训练模型", "default":"/gs/home/lianghx/gzl/pretrain_model/base/params"},
+    "print_per_step":{"type":"int", "description":"每隔多少步打印一次信息，若小于1则不打印", "default": 10}
+},
 "predict": {
-    "use_parallel":{"type":"bool","description":"是否并行运行训练/测试","default":false},
-    "use_gpu":{"type":"bool","description":"是否使用gpu","default":true},
-    "num_of_device":{"type":"int","description":"使用的设备数","default":1},
-    "batch_size":{"type":"int","description":"数据的batch大小","default":32},
-    "model_path":{"type":"string","description":"模型地址","default":"File_Directory/models/model"},
     "result_file_path":{"type":"string","description":"预测结果地址","default":"File_Directory/result/result.json"}
   }
 }
