--- a/File_Directory/config/config_default.json
+++ b/File_Directory/config/config_default.json
@@ -33,7 +33,8 @@
     "hidden_act":{"type":"string","description":"激活函数的名称","default":"gelu"},
     "hidden_dropout_prob":{"type":"float","description":"除attention参数外的dropout率","default":0.1},
     "attention_dropout_prob":{"type":"float","description":"attention参数的dropout率","default":0.1},
-    "initializer_range":{"type":"float","description":"参数随机初始化时的标准差","default":0.02}
+    "initializer_range":{"type":"float","description":"参数随机初始化时的标准差","default":0.02},
+    "mrc_layer":{"type":"string","description":"机器阅读理解层","default":"cls_fc"}
   },
 "train":{
     "max_epoch":{"type":"int","description":"最大训练epoch","default":20},
