--- a/File_Directory/config/config_ernie.json
+++ b/File_Directory/config/config_ernie.json
@@ -1,6 +1,9 @@
 {
   "global": {
-    "app_name": "ernie_base_run"
+    "app_name": "ernie_base_run",
+    "use_parallel": false,
+    "num_of_device": 1,
+    "load_model_path": "File_Directory/models/ernie_base_run_epoch0_2020-03-09_00-52-33"
   },
   "dataset": {
     "vocab_name": "vocab_ernie",
@@ -12,6 +15,10 @@
     "vocab_size": 18000
   },
   "train": {
+    "base_learning_rate": 1e-7,
+    "learning_rate_strategy": "fixed",
+    "optimizer": "adam",
+    "continue_train": true
 
   },
   "predict": {
