--- a/File_Directory/config/config_ernie.json
+++ b/File_Directory/config/config_ernie.json
@@ -1,12 +1,11 @@
 {
   "global": {
-    "app_name": "baseline_with_fixbug_bilstm_finetuning",
+    "app_name": "highway_lstm",
     "pretrained_model_type": "ernie",
-    "use_parallel": true,
+    "use_parallel": false,
     "use_gpu": true,
-    "num_of_device": 2,
-    "load_model_path": "/gs/home/lianghx/exp/ernie_base_line/ernie_base_run_epoch_12_acc85.72"
-
+    "num_of_device": 1,
+    "load_model_path": "/gs/home/lianghx/lhx/MRC/File_Directory/models/highway_lstm_step2500_2020-03-20_10-14-24"
   },
   "dataset": {
     "vocab_name": "vocab_ernie",
@@ -16,16 +15,17 @@
   "build": {
     "hidden_act": "relu",
     "vocab_size": 18000,
-    "mrc_layer": "lstm",
-    "freeze_pretrained_model": true
+    "mrc_layer": "highway_lstm",
+    "freeze_pretrained_model": false
   },
   "train": {
-    "base_learning_rate": 2e-5,
+    "max_epoch": 2,
+    "base_learning_rate": 1e-5,
     "learning_rate_strategy": "noam_worm_up_and_decay",
-    "warm_up_step": 1380,
+    "warm_up_step": 550,
     "optimizer": "adam",
     "continue_train": false,
-    "regularization": "",
+    "regularization": "L2",
     "regularization_coeff": 0.01,
     "read_checkpoint": false
   },
