--- a/File_Directory/config/config_roberta_large.json
+++ b/File_Directory/config/config_roberta_large.json
@@ -1,6 +1,6 @@
 {
   "global": {
-    "app_name": "validate_stage2_roberta_large_lstm",
+    "app_name": "test_stage2_roberta_large_lstm",
     "use_parallel": false,
     "num_of_device": 1,
     "batch_size": 4,
@@ -10,7 +10,7 @@
   "dataset": {
     "vocab_name": "vocab_roberta",
     "max_seq_length": 512,
-    "shuffle": true
+    "shuffle": false
   },
   "build": {
     "hidden_size": 1024,
@@ -19,7 +19,8 @@
     "hidden_act": "gelu",
     "vocab_size": 21128,
     "mrc_layer": "lstm",
-    "freeze_pretrained_model": false
+    "freeze_pretrained_model": false,
+    "lstm_hidden_size": 64
 
   },
   "train": {
@@ -38,6 +39,9 @@
     "read_checkpoint": false
   },
   "predict": {
-
+      "re_predict_threshold": 0.8,
+      "re_predict_mix_rate": 0.7,
+      "re_predict_decay_rate": 15,
+      "re_predict_select_threshold": 0.6,
   }
 }
