--- a/File_Directory/config/config_default.json
+++ b/File_Directory/config/config_default.json
@@ -6,6 +6,7 @@
     "num_of_device":{"type":"int","description":"使用的设备数","default":1},
     "model_path":{"type":"string","description":"预测使用模型路径","default":""},
     "pretrained_model_type": {"type":"string","description":"预训练模型选用哪个","default":"bert"},
+    "do_validate": {"type":"bool","description":"是否进行validate","default":true},
     "batch_size":{"type":"int","description":"batch的大小","default":32}
   },
 "dataset":{
